# Team-16-Robotic-Car

./: README.md  Team 16 Project Proposal.docx
main/: CMakeLists.txt  constants.h  headers.h  main.c  wifi.h
main/barcode/: CMakeLists.txt  barcode.c  barcode.h
main/html_files/: index.shtml
main/infrared/: CMakeLists.txt  infrared.h  line_detector.c
main/infrared/barcode/: CMakeLists.txt  barcode.c  barcode.h
main/infrared/line_detector/: CMakeLists.txt  line_detector.c  line_detector.h
main/magneto/: CMakeLists.txt  magneto.c  magneto.h
main/mapping/: mapping.c
main/motor/: CMakeLists.txt  constants.h  headers.h  motor.c  motor.h  motor_control.c  motor_control.h  pid.c
main/webserver/: CMakeLists.txt  cgi.h  htmldata.c  makefsdata.py  ssi.h
